jangaroo/jangaroo-compiler-itests/src/test/joo/error/cyclic/CyclicDependencyB.as

package error.cyclic {

public class CyclicDependencyB {
  public static const a:CyclicDependencyA = new CyclicDependencyA();
}
}